--- a/static/main.css
+++ b/static/main.css
@@ -21,6 +21,7 @@ pre code {
 
 .navbar-brand {
     color: #f4a7ba !important;
+    font-weight: bold;
 }
 
 .navbar-toggler {
@@ -197,8 +198,8 @@ ul.none {
 }
 
 .img-clover {
-    width: 180px;
-    height: 180px;
+    width: 120px;
+    height: 120px;
 }
 
 .courses .card {
